completed radar app
DS can run it; it connects to NT4 as both publisher and subscriber
and shows targets on a 2d screen with translation and rotation,
using msgpack.
to actually use it you'll need to turn off
the publisher part.